Implement Better Auth Authentication, Capactior for running App on Mobile Devices

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ TYPESCRIPT_MIGRATION.md
 OAUTH_QUICKSTART.md
 OAUTH_SETUP.md
 TESTING_AUTH.md
+EMAIL_VERIFICATION_SETUP.md
+ANDROID_DEPLOYMENT.md
+MOBILE_SAFE_AREAS.md
+OAUTH_REDIRECT_FIX.md
 
 # Dependencies
 node_modules/
