feat: Migrate from username to name field and implement multi-provider authentication with Account schema
Client Changes:
- Replace all 'username' references with 'name' across components, pages, and services
- Implement custom authentication API (authAPI.ts) replacing Better Auth
- Add Android-specific OAuth authentication support (androidAuth.ts)
- Add JWT token storage and management (tokenStore.ts)
- Update AuthContext to use custom auth with JWT expiry checks
- Refactor auth forms (SignIn, SignUp, EditProfile, Profile) to use 'name' field
- Update social auth buttons for Google OAuth (native & web)
- Enhance product and category components with improved data fetching
- Add new ProductInfo and CategoryPage components
- Update all icon components with proper typing
- Configure Capacitor for Android OAuth with custom URL schemes

Server Changes:
- Create Account model to track multiple authentication methods per user
- Implement transaction support for all auth operations (register, login, OAuth)
- Add Google OAuth endpoints (native sign-in & web callback)
- Update User model: rename 'username' to 'name', add 'isVerified' flag
- Refactor authController with Account schema integration for credentials and Google providers
- Update JWT middleware to use 'name' field
- Add email verification service
- Update auth routes with new Google OAuth endpoints
- Add CORS configuration for client requests

Dependencies:
- Add @capacitor/browser for Android OAuth
- Add nodemailer for email services
- Update package locks for both client and server

Breaking Changes:
- 'username' field replaced with 'name' across all user interfaces
- Authentication now requires Account entries for provider tracking
- All auth flows now use MongoDB transactions for data consistency

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,13 @@ EMAIL_VERIFICATION_SETUP.md
 ANDROID_DEPLOYMENT.md
 MOBILE_SAFE_AREAS.md
 OAUTH_REDIRECT_FIX.md
+ANDROID_OAUTH_IMPLEMENTATION.md
+ANDROID_OAUTH_SETUP.md
+BEARER_AUTH_MIGRATION.md
+FIREBASE_SETUP.md
+GOOGLE_ANDROID_OAUTH.md
+GOOGLE_OAUTH_QUICKSTART.md
+NGROK_QUICKSTART.md
 
 # Dependencies
 node_modules/
