feat: add SafeAreaLayout and apply to auth + onboarding
- Create reusable SafeAreaLayout to handle mobile safe areas (notches/home indicators)
- Apply SafeAreaLayout to SignIn, SignUp, ResetPassword, ResetPasswordConfirm, VerifyEmail, OtpVerification, and Onboarding
- Fix TS union access in AllCategories to avoid build error
- Move Capacitor 'server' config to root for live reload over LAN

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,23 @@ FIREBASE_SETUP.md
 GOOGLE_ANDROID_OAUTH.md
 GOOGLE_OAUTH_QUICKSTART.md
 NGROK_QUICKSTART.md
+AI_IMPLEMENTATION_SUMMARY.md
+AI_SCANNING_SETUP.md
+ARCHITECTURE.md
+DEPLOYMENT_CHECKLIST.md
+DOCUMENTATION_INDEX.md
+EMAIL_VERIFICATION_IMPLEMENTATION_SUMMARY.md
+EMAIL_VERIFICATION_IMPLEMENTATION_SUMMARY.md
+EMAIL_VERIFICATION_QUICK_REFERENCE.md
+EMAIL_VERIFICATION_IMPLEMENTATION.md
+GETTING_STARTED.md
+IMPLEMENTATION_CHECKLIST.md
+IMPLEMENTATION_COMPLETE.md
+IMPLEMENTATION_OVERVIEW.md
+QUICK_REFERENCE.md
+start-all.ps1
+SYSTEM_ARCHITECTURE.md
+TROUBLESHOOTING.md
 
 # Dependencies
 node_modules/
