--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@capacitor/preferences": "^7.0.2",
+    "@sendgrid/mail": "^8.1.6",
     "axios": "^1.13.1",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.3.34",
