--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ VITE_API_URL=http://localhost:8000
 
 # App URL (for OAuth callbacks)
 VITE_APP_URL=http://localhost:5173
+
+# UploadThing Configuration
+# The backend URL where UploadThing is configured
+VITE_UPLOADTHING_URL=http://localhost:8000/api/uploadthing
