--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
+    "@uploadthing/react": "^7.3.3",
     "axios": "^1.13.1",
     "better-auth": "^1.3.34",
     "capacitor-secure-storage-plugin": "^0.12.0",
@@ -42,8 +43,10 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
+    "uploadthing": "^7.7.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
