Fixed category stale data and fixed UI for onboarding and login

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,5 +21,5 @@ org.gradle.jvmargs=-Xmx1536m
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 
-# Use Java 21 for Gradle builds (required for Capacitor 7)
-org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-21.0.9.10-hotspot
+# Gradle JDK is configured in Android Studio: File > Settings > Build > Gradle > Gradle JDK
+# Don't hardcode org.gradle.java.home here - it breaks cross-platform development
